--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="content">
         <div class="left-col-1">
           <h1>Conmebol <br> Copa America <br> 2021</h1>
-          <button>Watch Live</button>
+          <button>Watch Live <i class="fas fa-arrow-right"></i></button>
         </div>
         <div class="right-col-1">
           <img src="imaGES/banner.png" alt="">
@@ -43,6 +43,88 @@
     </section>
 
   </header>
+   <main class="container">
+     <section class="main-section">
+       <div class="section-body">
+         <article class="article-info">
+           <img src="images/players/player-5.png" alt="">
+           <h2>Mesut Ozil </h2>
+           <p>Due to his performances in the 2010 FIFA World Cup, Özil ensured his place among Europe's top young talents. He was sought by teams like Barcelona, Arsenal and Real.</p>
+         </article>
+         <article class="article-info">
+           <img src="images/players/player-2.png" alt="">
+           <h2>Lionel Messi</h2>
+           <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team.</p>
+         </article>
+         <article class="article-info">
+           <img src="images/players/player-3.png" alt="">
+           <h2>Cristiano Ronaldo </h2>
+           <p>Rolando was born in São Vicente, Cape Verde. After beginning his career in the youth ranks of lowly S.C. Campomaiorense, he finished his development</p>
+         </article>
+         <article class="article-info">
+           <img src="images/players/player-4.png" alt="">
+           <h2>Paulo Dybala</h2>
+           <p>Due to his performances in the 2010 FIFA World Cup, Özil ensured his place among Europe's top young talents. He was sought by teams like Barcelona, Arsenal and Real.</p>
+         </article>
+         <article class="article-info">
+           <img src="images/players/player-6.png" alt="">
+           <h2>Mauro Icardi </h2>
+           <p>Due to his performances in the 2010 FIFA World Cup, Özil ensured his place among Europe's top young talents. He was sought by teams like Barcelona, Arsenal and Real.</p>
+         </article>
+         <article class="article-info">
+           <img src="images/players/player-7.png" alt="">
+           <h2>Di Maria</h2>
+           <p>Due to his performances in the 2010 FIFA World Cup, Özil ensured his place among Europe's top young talents. He was sought by teams like Barcelona, Arsenal and Real.</p>
+         </article>
+         <article class="article-info">
+           <img src="images/players/player-8.png" alt="">
+           <h2>Kylian Mbappé</h2>
+           <p>Due to his performances in the 2010 FIFA World Cup, Özil ensured his place among Europe's top young talents. He was sought by teams like Barcelona, Arsenal and Real.</p>
+         </article>
+         <article class="article-info">
+           <img src="images/players/player-9.png" alt="">
+           <h2>Mohamed Salah</h2>
+           <p>Due to his performances in the 2010 FIFA World Cup, Özil ensured his place among Europe's top young talents. He was sought by teams like Barcelona, Arsenal and Real.</p>
+         </article>
+         <article class="article-info">
+           <img src="images/players/player-10.png" alt="">
+           <h2>Harry Kane</h2>
+           <p>Due to his performances in the 2010 FIFA World Cup, Özil ensured his place among Europe's top young talents. He was sought by teams like Barcelona, Arsenal and Real.</p>
+         </article>
+         <article class="article-info">
+           <img src="images/players/player-11.png" alt="">
+           <h2>Kevin De Bruyne</h2>
+           <p>Due to his performances in the 2010 FIFA World Cup, Özil ensured his place among Europe's top young talents. He was sought by teams like Barcelona, Arsenal and Real.</p>
+         </article>
+         <article class="article-info">
+           <img src="images/players/player-12.png" alt="">
+           <h2>Philippe Coutinho </h2>
+           <p>Due to his performances in the 2010 FIFA World Cup, Özil ensured his place among Europe's top young talents. He was sought by teams like Barcelona, Arsenal and Real.</p>
+         </article>
+         <article class="article-info">
+           <img src="images/players/player-1.png" alt="">
+           <h2>Neymar Jr</h2>
+           <p>Due to his performances in the 2010 FIFA World Cup, Özil ensured his place among Europe's top young talents. He was sought by teams like Barcelona, Arsenal and Real.</p>
+         </article>
+       </div>
+     </section>
+   </main>
+    <!-- footer section -->
+    <footer class="footer-section">
+        <div class="footer-content">
+          <img src="images/Logo.png" alt="">
+            <ul class="social">
+              <li><a href="https://www.instagram.com/rafsan.jani.98892/" target="-blank"><i class="fab fa-instagram"></i></a></li>
+              <li><a href="https://dribbble.com/tags/login" target="-blank"><i class="fab fa-dribbble"></i></a></li>
+              <li><a href="https://twitter.com/home" target="-blank"> <i class="fab fa-twitter"></i></a></li>
+              <li><a href="https://www.youtube.com/channel/UCVwg4p55J_k3Menjzc7TQbA" target="-blank" ><i class="fab fa-youtube"></i> </a></li>
+            </ul>       
+        </div>
+       <div class="footer-bottom">
+         <p>copyright &copy;2008 Football</p>
+       </div>
+        
+    </footer>
   
 </body>
 </html>
