--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <button>Watch Live <i class="fas fa-arrow-right"></i></button>
         </div>
         <div class="right-col-1">
-          <img src="imaGES/banner.png" alt="">
+          <img src="images/banner.png" alt="">
         </div>
       </div>
     </section>
