--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="">Contact </a>
       </div>
       <div class="right-col">
-        <button> <img src="images/social icons/login.png" alt=""> Login</button>
+        <button> <i class="fas fa-sign-in-alt"></i> Login</button>
       </div>
 
     </div>
@@ -37,7 +37,10 @@
           <button>Watch Live <i class="fas fa-arrow-right"></i></button>
         </div>
         <div class="right-col-1">
-          <img src="images/banner.png">
+          <figure> 
+            <img src="images/banner.png">
+          </figure>
+         
         </div>
       </div>
     </section>
