--- a/index.html
+++ b/index.html
@@ -111,7 +111,20 @@
          </article>
        </div>
      </section>
+    
    </main>
+   <section class="gallery-section">
+    <h1>Gallery</h1>
+   <div class="gellery-img"><img src="images/gallery/1.png" alt=""></div>
+   <div class="gellery-img"><img src="images/gallery/2.jpg" alt=""></div>
+   <div class="gellery-img"><img src="images/gallery/3.jpg" alt=""></div>
+   <div class="gellery-img"><img src="images/gallery/4.jpg" alt=""></div>
+   <div class="gellery-img"><img src="images/gallery/5.jpg" alt=""></div>
+   <div class="gellery-img"><img src="images/gallery/6.jpg" alt=""></div>
+   <div class="gellery-img"><img src="images/gallery/7.jpg" alt=""></div>
+   <div class="gellery-img"><img src="images/gallery/8.jpg" alt=""></div>
+  </section>
+
     <!-- footer section -->
     <footer class="footer-section">
         <div class="footer-content">
