--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
      </section>
     
    </main>
+    <!-- gallery-section -->
    <section class="gallery-section">
     <h1>Gallery</h1>
    <div class="gellery-img"><img src="images/gallery/1.png" alt=""></div>
@@ -124,6 +125,26 @@
    <div class="gellery-img"><img src="images/gallery/7.jpg" alt=""></div>
    <div class="gellery-img"><img src="images/gallery/8.jpg" alt=""></div>
   </section>
+    <!-- video section -->
+    <section class="video-section">
+      <h4>HIGHLIGHTS Videos</h4>
+      <div class="videos">
+        <div class="video">
+          <video src="media/1.mp4" controls autoplay></video>
+          <h2>HIGHLIGHTS BOLIVIA 1 - 4 ARGENTINA | COPA AMÉRICA 2021 | 28-06-21</h2>
+          </div>
+        <div class="video">
+          <video src="media/2.mp4" controls autoplay></video>
+          <h2>HIGHLIGHTS PERÚ 3 (4) - (3) 3 PARAGUAY | COPA AMÉRICA 2021 | 02-07-21</h2>
+          </div>
+        <div class="video">
+          <video src="media/3.mp4" controls autoplay></video>
+         <h2> HIGHLIGHTS BRASIL 1 - 0 CHILE | COPA AMÉRICA 2021 | 02-07-21</h2>
+        </div>
+      </div>
+
+
+    </section>
 
     <!-- footer section -->
     <footer class="footer-section">
